--- a/package.json
+++ b/package.json
@@ -10,8 +10,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-amplify/core": "^6.0.27",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/netinfo": "^11.3.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-feather": "^1.1.2",
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.30.1",
+    "react-native-stars": "^1.2.2",
+    "react-native-svg": "^15.1.0",
+    "react-native-video": "^5.2.1",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
